# aiman

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.agents/codex/tasks/ongoing/0001_docker_support/: .progress.md.swp  plan.md  progress.md
code-review/: 2026-03-11T00-26-45_940120f.md
configs/: hosts.toml
configs-example/: README.md  engines.toml  hosts.toml
configs-example/agent/: docker-images.json  engines.toml
configs-example/dashboard/: hosts.toml
crates/aiman_agent/: Cargo.toml
crates/aiman_agent/src/: api.rs  auth.rs  benchmark.rs  hardware.rs  main.rs  models.rs  state.rs  supervisor.rs
crates/aiman_agent/src/supervisor/: error.rs  handle.rs  mod.rs  store.rs
crates/aiman_dashboard/: Cargo.toml
crates/aiman_dashboard/src/: error.rs  hosts.rs  main.rs  state.rs  types.rs
crates/aiman_dashboard/src/api/: aggregation.rs  benchmark.rs  hosts.rs  mod.rs  proxy.rs  streaming.rs
crates/host/: Cargo.toml
crates/host/src/: api.rs  auth.rs  benchmark.rs  hardware.rs  main.rs  supervisor.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  hardware.rs  http.rs  lib.rs  storage.rs
dashboard/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/src/server/: benchmark.ts  hosts.ts  index.ts  proxy.ts  types.ts
dashboard/src/ui/: App.vue  index.html  style.css  types.ts
dashboard/src/ui/components/: ArgumentListEditor.vue  BenchmarkModal.vue  ConfigModal.vue  ContainerConfigFields.vue  ContainerImageFields.vue  CustomConfigFields.vue  DockerConfigFields.vue  DockerImageFields.vue  EngineCard.vue  EngineDetailModal.vue  EnvVarListEditor.vue  FastllmConfigFields.vue  HardwareCard.vue  HostModal.vue  ImageModal.vue  KTransformersConfigFields.vue  LlamaCppConfigFields.vue  TabbyAPIConfigFields.vue  VllmConfigFields.vue
dashboard/src/ui/composables/: useBenchmarks.ts  useConfigs.ts  useContainerImages.ts  useDockerImages.ts  useEngines.ts  useEvents.ts  useHosts.ts  useLogs.ts
dashboard/src/ui/engine-args/: container.ts  custom.ts  docker.ts  fastllm.ts  kTransformers.ts  llamaCpp.ts  shared.ts  tabbyapi.ts  vllm.ts
dashboard/src/ui/utils/: format.ts
dashboard/src/ui/views/: AdminView.vue  BenchmarksView.vue  EnginesView.vue
docs/: architecture.md
nix/: aiman-dashboard-ui.nix  aiman-dashboard.nix  aiman-host.nix  aiman_agent.nix  aiman_dashboard.nix  llama-benchy.nix
nix/modules/: aiman_agent.nix  dashboard.nix  host.nix
