[package]
name = "aiman_agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
toml.workspace = true
futures-util.workspace = true
sysinfo.workspace = true
reqwest.workspace = true
libc.workspace = true
nvml-wrapper.workspace = true
tempfile.workspace = true
rev_buf_reader.workspace = true
process-wrap.workspace = true
aiman-shared.workspace = true
