[package]
name = "aiman_dashboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aiman-shared = { workspace = true, features = ["http"] }
axum.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures-util.workspace = true
urlencoding = "2.1"
http = "1.0"
