[package]
name = "aiman-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[dependencies.aiman-shared]
path = "../shared"
