[package]
name = "aiman-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "signal", "process", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
futures-util = "0.3"

[dependencies.aiman-shared]
path = "../shared"
