[package]
name = "aiman-shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util", "time"] }
rev_buf_reader.workspace = true
tempfile.workspace = true

# Optional dependencies for http module
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
bytes = { version = "1.0", optional = true }

[features]
default = []
http = ["axum", "reqwest", "futures-util", "bytes"]
